--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
                 <label for="newPassword">Новый пароль:</label>
                 <input type="password" id="newPassword" name="newPassword" required>
 
+                <select id="role" required>
+                    <option value="Администратор">Администратор</option>
+                    <option value="Менеджер">Менеджер</option>
+                    <option value="Подсос">Подсос</option>
+                </select>
+
                 <button type="submit">Зарегистрироваться</button>
             </form>
         </div>
