--- a/maininterface.html
+++ b/maininterface.html
@@ -20,6 +20,7 @@
     <button id="tab2Btn" class="tablinks" onclick="openTab(event, 'Tab2')">Перегляд оферів</button>
     <button id="tab3Btn" class="tablinks" onclick="openTab(event, 'Tab3')">Реєстрація працівників</button>
     <button id="tab4Btn" class="tablinks" onclick="openTab(event, 'Tab4')">Перегляд персоналу</button>
+    <button id="tab5Btn" class="tablinks" onclick="openTab(event, 'Tab5')">Підбір персоналу</button>
 </div>
 
 <div id="Tab1" class="tabcontent">
@@ -89,6 +90,18 @@
     <div id="personnelList">
         <h3>Список персоналу</h3>
         <ul id="personnel"></ul>
+    </div>
+</div>
+
+<div id="Tab5" class="tabcontent">
+    <!-- Вкладка "Подбор персонала" -->
+    <div id="vacanciesContainer">
+        <!-- Контейнер для вакансий -->
+    </div>
+    <button id="confirmButton5" onclick="confirmMatching()">Подтвердить совпадение</button>
+
+    <div id="employeesContainer">
+        <!-- Контейнер для работников -->
     </div>
 </div>
 
