--- a/maininterface.html
+++ b/maininterface.html
@@ -21,6 +21,7 @@
     <button id="tab3Btn" class="tablinks" onclick="openTab(event, 'Tab3')">Реєстрація працівників</button>
     <button id="tab4Btn" class="tablinks" onclick="openTab(event, 'Tab4')">Перегляд персоналу</button>
     <button id="tab5Btn" class="tablinks" onclick="openTab(event, 'Tab5')">Підбір персоналу</button>
+    <button id="tab6Btn" class="tablinks" onclick="openTab(event, 'Tab6')">Працюючий персонал</button>
 </div>
 
 <div id="Tab1" class="tabcontent">
@@ -88,7 +89,6 @@
 <div id="Tab4" class="tabcontent">
     <!-- Содержимое вкладки 4 -->
     <div id="personnelList">
-        <h3>Список персоналу</h3>
         <ul id="personnel"></ul>
     </div>
 </div>
@@ -98,10 +98,16 @@
     <div id="vacanciesContainer">
         <!-- Контейнер для вакансий -->
     </div>
-    <button id="confirmButton5" onclick="confirmMatching()">Подтвердить совпадение</button>
+    <button id="confirmButton5">Подтвердить совпадение</button>
 
     <div id="employeesContainer">
         <!-- Контейнер для работников -->
+    </div>
+</div>
+
+<div id="Tab6" class="tabcontent">
+    <div id="acceptedOffersContainer">
+        <!-- Сюда будет добавлено содержимое acceptedoffers.json -->
     </div>
 </div>
 
