--- a/maininterface.html
+++ b/maininterface.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Interface</title>
+    <title>Додаток організації персоналу</title>
     <link rel="stylesheet" href="stylesmain.css">
     <script src="scriptmain.js"></script>
 </head>
