--- a/index.html
+++ b/index.html
@@ -3,52 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой веб-приложение</title>
+    <title>Додаток організації персоналу</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
 <div class="container">
     <div class="form-container">
         <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'login')">Вход</button>
-            <button class="tablinks" onclick="openTab(event, 'register')">Регистрация</button>
+            <button class="tablinks" onclick="openTab(event, 'login')">Вхід</button>
+            <button class="tablinks" onclick="openTab(event, 'register')">Регістрація</button>
         </div>
 
         <div id="login" class="tabcontent">
-            <h2>Вход</h2>
+            <h2>Вхід</h2>
             <form id="loginForm" onsubmit="login(event)">
-                <label for="username">Логин:</label>
+                <label for="username">Логін:</label>
                 <input type="text" id="username" name="username" required>
 
                 <label for="password">Пароль:</label>
                 <input type="password" id="password" name="password" required>
 
-                <button type="submit">Войти</button>
+                <button type="submit">Увійти</button>
             </form>
         </div>
 
         <div id="register" class="tabcontent">
             <h2>Регистрация</h2>
             <form id="registerForm" onsubmit="register(event)">
-                <label for="newUsername">Новый логин:</label>
+                <label for="newUsername">Новий логин:</label>
                 <input type="text" id="newUsername" name="newUsername" required>
 
-                <label for="newPassword">Новый пароль:</label>
+                <label for="newPassword">Новий пароль:</label>
                 <input type="password" id="newPassword" name="newPassword" required>
 
                 <select id="role" required>
                     <option value="Администратор">Администратор</option>
                     <option value="Менеджер">Менеджер</option>
-                    <option value="Подсос">Подсос</option>
+                    <option value="Оператор ПК">Оператор ПК</option>
                 </select>
 
-                <button type="submit">Зарегистрироваться</button>
+                <button type="submit">Зареєструватись</button>
             </form>
         </div>
     </div>
 </div>
 
-<script src="script.js"></script>
+
 </body>
 </html>
