--- a/maininterface.html
+++ b/maininterface.html
@@ -26,24 +26,24 @@
 
 <div id="Tab1" class="tabcontent">
     <div id="offerForm">
-        <h3>Создать новый оффер</h3>
+        <h3>Створити новий оффер</h3>
         <form onsubmit="createOffer(event)">
-            <label for="companyName">Название компании:</label>
+            <label for="companyName">Назва компанії:</label>
             <input type="text" id="companyName" required>
 
-            <label for="offerName">Название оффера:</label>
+            <label for="offerName">Назва офферу:</label>
             <input type="text" id="offerName" required>
 
             <label for="salary">Зарплата:</label>
             <input type="text" id="salary" required>
 
-            <label for="language">Язык вакансии:</label>
+            <label for="language">Мова вакансії:</label>
             <input type="text" id="language" required>
 
-            <label for="technologies">Необходимые технологии:</label>
+            <label for="technologies">Необхідні технології:</label>
             <input type="text" id="technologies" required>
 
-            <button type="submit">Создать оффер</button>
+            <button type="submit">Створити оффер</button>
         </form>
     </div>
 </div>
@@ -51,7 +51,7 @@
 <div id="Tab2" class="tabcontent">
     <!-- Содержимое вкладки 2 -->
     <div id="offerList">
-        <h3>Список оферов</h3>
+        <h3>Список офферів</h3>
         <ul id="offers"></ul>
     </div>
 </div>
@@ -98,7 +98,7 @@
     <div id="vacanciesContainer">
         <!-- Контейнер для вакансий -->
     </div>
-    <button id="confirmButton5">Подтвердить совпадение</button>
+    <button id="confirmButton5">Підтвердити оффер</button>
 
     <div id="employeesContainer">
         <!-- Контейнер для работников -->
@@ -112,7 +112,7 @@
 </div>
 
 <div id="notification" class="notification hide">
-    <p id="notification-message">Офер успешно создан!</p>
+    <p id="notification-message">Оффер успішно створено!</p>
   </div>
 </body>
 </html>
