--- a/maininterface.html
+++ b/maininterface.html
@@ -71,39 +71,27 @@
 </div>
 
 <div id="Tab3" class="tabcontent">
-    <div id="employeeForm">
-        <h3>Зареєструвати нового працівника</h3>
-        <form onsubmit="registerEmployee(event)">
-            <label for="firstName">Ім'я:</label>
-            <input type="text" id="firstName" required>
-
-            <label for="lastName">Прізвище:</label>
-            <input type="text" id="lastName" required>
-
-            <label for="middleName">По-батькові:</label>
-            <input type="text" id="middleName" required>
-
-            <label for="birthYear">Рік народження:</label>
-            <input type="text" id="birthYear" required>
-
-            <label for="experience">Стаж роботи:</label>
-            <input type="text" id="experience" required>
-
-            <label for="technologies">Освоєні технології:</label>
-            <input type="text" id="employeeTechnologies" required>
-
-            <label for="expectedSalary">Очікувана зарплата:</label>
-            <input type="text" id="expectedSalary" required>
-
-            <button type="submit">Зареєструвати працівника</button>
+    <div id="roomForm">
+        <h3>Додати інформацію про кімнати</h3>
+        <form onsubmit="submitRooms(event)">
+            <label for="apartmentId">ID квартири:</label>
+            <input type="text" id="apartmentId" required>
+            <label for="apartmentImage">Посилання на картинку квартири:</label>
+            <input type="text" id="apartmentImage" required>
+            <div id="roomFields">
+                <!-- Поля для введення даних про кімнати будуть додані тут -->
+            </div>
+            <button type="button" onclick="addRoomField()">Додати кімнату</button>
+            <button type="submit">Зберегти кімнати</button>
         </form>
     </div>
 </div>
 
+
+
 <div id="Tab4" class="tabcontent">
-    <!-- Вміст вкладки 4 -->
-    <div id="personnelList">
-        <ul id="personnel"></ul>
+    <div id="roomsList" class="rooms-list">
+        <!-- Квартири будуть відображені тут -->
     </div>
 </div>
 
