--- a/maininterface.html
+++ b/maininterface.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,8 +19,8 @@
     <button id="tab2Btn" class="tablinks" onclick="openTab(event, 'Tab2')">Перегляд приладів</button>
     <button id="tab3Btn" class="tablinks" onclick="openTab(event, 'Tab3')">Реєстрація квартир</button>
     <button id="tab4Btn" class="tablinks" onclick="openTab(event, 'Tab4')">Перегляд квартир</button>
-    <button id="tab5Btn" class="tablinks" onclick="openTab(event, 'Tab5')">Підбір персоналу</button>
-    <button id="tab6Btn" class="tablinks" onclick="openTab(event, 'Tab6')">Працюючий персонал</button>
+    <button id="tab5Btn" class="tablinks" onclick="openTab(event, 'Tab5')">Підбір приладів</button>
+    <button id="tab6Btn" class="tablinks" onclick="openTab(event, 'Tab6')">Підібрані пристрої</button>
 </div>
 
 <div id="Tab1" class="tabcontent">
@@ -87,8 +86,6 @@
     </div>
 </div>
 
-
-
 <div id="Tab4" class="tabcontent">
     <div id="roomsList" class="rooms-list">
         <!-- Квартири будуть відображені тут -->
@@ -96,22 +93,26 @@
 </div>
 
 <div id="Tab5" class="tabcontent">
-    <!-- Вкладка "Підбір персоналу" -->
-    <div id="vacanciesContainer">
-        <!-- Контейнер для вакансий -->
+    <!-- Вкладка "Фільтр та вибір пристроїв" -->
+    <div id="devicesContainer">
+        <!-- Контейнер для пристроїв -->
     </div>
-    <button id="confirmButton5">Підтвердити оффер</button>
-
-    <div id="employeesContainer">
-        <!-- Контейнер для работников -->
+    <div id="roomsWithDevices">
+        <!-- Контейнер для кімнат і пристроїв -->
     </div>
+    <button id="confirmButton5">Підтвердити відповідність</button>
 </div>
+
 
 <div id="Tab6" class="tabcontent">
-    <div id="acceptedOffersContainer">
-        <!-- Сюди буде додано вміст acceptedoffers.json -->
+    <!-- Вкладка "Інформація про підтверджені відповідності" -->
+    <div id="acceptedOffersInfo">
+        <!-- Контейнер для інформації про підтверджені відповідності -->
     </div>
 </div>
+
+
+
 
 <div id="notification" class="notification hide">
     <p id="notification-message">Оффер успішно створено!</p>
